Centralizando as mensagens

--- a/src/resources/MessagesBundle_pt_BR.properties
+++ b/src/resources/MessagesBundle_pt_BR.properties
@@ -1,7 +1,7 @@
-localeInfo = Português/Brasil
-titMain = Sistema de Consultório Médico
-labelLogin = Digite seu login:
-labelSenha = Digite sua senha:
+localeInfo 	= Português/Brasil
+titMain 	= Sistema de Consultório Médico
+labelLogin 	= Digite seu login:
+labelSenha	= Digite sua senha:
 
 mainMenuTit = Escolha uma opção dos itens abaixo:
 
@@ -10,25 +10,68 @@ mainMenu1 = \t1- Médicos
 	mainMenu1subMenuTit = Escolha uma opção dos itens abaixo:
 	
 	mainMenu1subMenu1 = \t1- Listar Médicos
-	
-		mainMenu1subMenu1Label1 = Id:
-		mainMenu1subMenu1Label2 = Nome:
-		mainMenu1subMenu1Label3 = Crm:
-		mainMenu1subMenu1Label4 = Especialidade:
-		mainMenu1subMenu1Label5 = Login:
-		mainMenu1subMenu1Label6 = Senha:
-		mainMenu1subMenu1Label7 = Digite ENTER para continuar....
+	mainMenu1subMenu1Label1 = Id:
+	mainMenu1subMenu1Label2 = Nome:
+	mainMenu1subMenu1Label3 = Crm:
+	mainMenu1subMenu1Label4 = Especialidade:
+	mainMenu1subMenu1Label5 = Login:
+	mainMenu1subMenu1Label6 = Senha:
+	mainMenu1subMenu1Label7 = Digite ENTER para continuar....
 	
 	mainMenu1subMenu2 = \t2- Incluir Médico
+	mainMenu1subMenu2Label1 = "Digite o nome ";
+	mainMenu1subMenu2Label1 = "Digite o crm: ";
+	mainMenu1subMenu2Label1 = "Digite o especialidade: ";
+	mainMenu1subMenu2Label1 = "Digite o login: ";
+	mainMenu1subMenu2Label1 = "Digite o senha: ";
+	
 	mainMenu1subMenu3 = \t3- Alterar Médico
+	mainMenu1subMenu3Label1 = "Digite o id do médico que você deseja alterar: "
+	
 	mainMenu1subMenu4 = \t4- Excluir Médico
+	mainMenu1subMenu4Label1 = "Digite o id do médico que você deseja excluir: "
+	
 	mainMenu1subMenu5 = \t5- Voltar ao Menu Anterior
 
 
 mainMenu2 = \t2- Pacientes
+
+	mainMenu2subMenuTit = Escolha uma opção dos itens abaixo:
+	
+	mainMenu2subMenu1 = \t1- Listar Pacientes
+	mainMenu2subMenu1Label1 = Id:
+	mainMenu2subMenu1Label2 = Nome:
+	mainMenu2subMenu1Label3 = Data de Nascimento:
+	mainMenu2subMenu1Label4 = Plano de Saúde:
+	mainMenu2subMenu1Label5 = Digite ENTER para continuar....
+	
+	mainMenu2subMenu2 = \t2- Incluir Paciente
+	mainMenu2subMenu2Label1 = "Digite o nome: ";
+	mainMenu2subMenu2Label2 = "Digite a data de nascimento (dd/mm/aaaa): ";
+	mainMenu2subMenu2Label3	= "Digite o plano de saúde: ";
+	
+	mainMenu2subMenu3 = \t3- Alterar Paciente
+	mainMenu2subMenu3Label1 = Digite o id do paciente que você deseja alterar:
+	
+	mainMenu2subMenu4 = \t4- Excluir Paciente
+	mainMenu2subMenu4Label1 = Digite o id do paciente que você deseja excluir:
+	
+	mainMenu2subMenu5 = \t5- Voltar ao Menu Anterior
+
+-- /* Falta Implementar*/
 mainMenu3 = \t3- Atendentes
+
+-- /* Falta Implementar*/
 mainMenu4 = \t4- Consultas
+	
 mainMenu5 = \t5- Relatórios
+	
+	mainMenu5subMenuTit = Escolha uma opção dos itens abaixo:
+	
+	mainMenu5subMenu1 = \t1- Gerar Relatorio 'Lista de Pacientes em PDF'
+	mainMenu5subMenu2 = \t2- Gerar Relatorio 'Historico do Paciente em PDF'
+	mainMenu5subMenu3 = \t3- Voltar ao Menu Anterior
+
 mainMenu6 = \t6- Sair
  
 
