--- a/src/resources/MessagesBundle_en_US.properties
+++ b/src/resources/MessagesBundle_en_US.properties
@@ -1,39 +1,11 @@
-localeInfo = Português/Brasil123
-titMain = Sistema de Consultório Médico
-labelLogin = Digite seu login:
-labelSenha = Digite sua senha:
+localeInfo = English/United States
+titMain = Doctor`s Office System
+labelLogin = Login:
+labelSenha = Password:
 
-mainMenuTit = Escolha uma opção dos itens abaixo:
-
-mainMenu1 = \t1- Médicos
-	
-	mainMenu1subMenuTit = Escolha uma opção dos itens abaixo:
-	
-	mainMenu1subMenu1 = \t1- Listar Médicos
-	
-		mainMenu1subMenu1Label1 = Id:
-		mainMenu1subMenu1Label2 = Nome:
-		mainMenu1subMenu1Label3 = Crm:
-		mainMenu1subMenu1Label4 = Especialidade:
-		mainMenu1subMenu1Label5 = Login:
-		mainMenu1subMenu1Label6 = Senha:
-		mainMenu1subMenu1Label7 = Digite ENTER para continuar....
-	
-	mainMenu1subMenu2 = \t2- Incluir Médico
-	mainMenu1subMenu3 = \t3- Alterar Médico
-	mainMenu1subMenu4 = \t4- Excluir Médico
-	mainMenu1subMenu5 = \t5- Voltar ao Menu Anterior
+-- Inserir as outras mensagens aqui
 
 
-mainMenu2 = \t2- Pacientes
-mainMenu3 = \t3- Atendentes
-mainMenu4 = \t4- Consultas
-mainMenu5 = \t5- Relatórios
-mainMenu6 = \t6- Sair
- 
+-- Fim das mensagens
 
-
-
-
-
-erro = Ação não permitida !!! Aguarde que estamos redirecionando você para o menu principal
+erro = Forbidden !!! Redirecting for the Main Menu...
