- adicionando a parte de internacionalização

--- a/src/resources/MessagesBundle_en_US.properties
+++ b/src/resources/MessagesBundle_en_US.properties
@@ -1,7 +1,7 @@
 localeInfo = English/United States
 titMain = Doctor`s Office System
-labelLogin = Login:
-labelSenha = Password:
+labelLogin = Type your login:
+labelSenha = Type your password:
 
 -- Inserir as outras mensagens aqui
 
